--- a/src/style/_brandPage.scss
+++ b/src/style/_brandPage.scss
@@ -1,10 +1,9 @@
 .brand-page {
   position: fixed;
   top: 0;
-  background-color: var(--color-bg);
+  background-color: hsl(237, 79%, 12%);
   width: 100%;
   height: 100vh;
-  padding: 1rem;
   z-index: 1;
   overflow-y: scroll;
 
@@ -15,8 +14,11 @@
   &-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 1rem;
     margin-bottom: 1rem;
+    padding: 0.5rem;
+    background-color: #4cc9f0ff;
   }
 
   &__title {
@@ -24,22 +26,22 @@
   }
 
   > .brand-page__search {
-    margin: 0 0 1rem;
+    margin: 1rem;
   }
 
   &__add-btn {
     padding: 0.5rem;
-    width: 100%;
+    width: calc(100% - 2rem);
     border-radius: 0.8rem;
     background-color: greenyellow;
-    margin-bottom: 1rem;
+    margin: 1rem;
 
     &:hover {
       cursor: pointer;
       opacity: 0.8;
     }
 
-    @media (width <= 768px) {
+    @media (width < 769px) {
       padding: 1rem;
       font-size: 1.2rem;
     }
@@ -52,6 +54,7 @@
     background-color: var(--list-color-bg);
     border-radius: 1rem;
     padding: 1rem;
+    margin: 1rem;
     
     &__item {
       display: flex;
