--- a/src/style/_brandSuggest.scss
+++ b/src/style/_brandSuggest.scss
@@ -1,10 +1,10 @@
 .brand-suggest {
   position: fixed;
   top: 0;
-  background-color: var(--color-bg);
+  background-color: hsl(237, 79%, 12%);
   width: 100%;
   height: 100%;
-  padding: 1rem;
+  // padding: 1rem;
   z-index: 1;
   overflow-y: scroll;
 
@@ -12,6 +12,8 @@
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
+    background-color: #4cc9f0ff;
+    padding: 0.5rem;
   }
 }
 
@@ -29,6 +31,7 @@
 }
 
 .brand-form {
+  margin: 1rem;
   &__label {
     display: block;
     margin-bottom: 1rem;
