--- a/src/style/_catalog.scss
+++ b/src/style/_catalog.scss
@@ -2,10 +2,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: var(--color-bg);
+  background-color: hsl(237, 79%, 12%);
   width: 100%;
   height: 100%;
-  padding: 1rem 1rem;
   z-index: 2;
   overflow-y: scroll;
 
@@ -18,7 +17,8 @@
     align-items: center;
     gap: 1rem;
     margin-bottom: 1rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
+    background-color: #4cc9f0ff;
   }
 
   &__back-button {
@@ -65,15 +65,16 @@
 
   > .catalog__search {
     border: 1px solid black;
-    margin: 0 0 1rem;
+    margin: 1rem;
   }
 
   &__brand-suggest-btn {
     padding: 0.5rem;
-    width: 100%;
+    width: calc(100% - 2rem);
     border-radius: 0.8rem;
     background-color: greenyellow;
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
+    margin: 1rem;
 
     &:hover {
       cursor: pointer;
@@ -86,6 +87,7 @@
     list-style: none;
     border-radius: 1rem;
     padding: 1rem;
+    margin: 1rem;
 
     img {
       width: 5rem;
