feat: change style of flavors number tag on mixer/blender icon

--- a/src/style/_catalog.scss
+++ b/src/style/_catalog.scss
@@ -50,17 +50,17 @@
   }
 
   &__mixer-number {
-    color: greenyellow;
     border-radius: 50%;
-    border: 1px solid greenyellow;
+    border: 1px solid green;
+    background-color: greenyellow;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 1.5rem;
     height: 1.5rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
     text-align: center;
-    vertical-align: baseline;
   }
 
   > .catalog__search {
