--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -47,13 +47,16 @@
 }
 
 .header__mixer-number {
-  width: 1rem;
-  height: 1rem;
   position: absolute;
-  left: -0.5rem;
-  bottom: -0.5rem;
+  left: -1rem;
+  bottom: -1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1.2rem;
   color: black;
   background-color: greenyellow;
+  border: 1px solid green;
   border-radius: 50%;
   text-align: center;
+  font-weight: bold;
 }
