feat: a page with favorite tobaccos has been implemented

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,7 @@
 @import './style/searchPage';
 @import './style/message';
 @import './style/accountPageAuth';
+@import './style/favorite_flavor';
 @import './style/edit_page';
 @import './style/preloader';
 @import './style/results';
