--- a/src/style/_preferences.scss
+++ b/src/style/_preferences.scss
@@ -5,10 +5,14 @@
   width: 100%;
   height: 100vh;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
   &__header {
     display: flex;
     align-items: center;
     background: linear-gradient(148deg, rgba(237,184,255,1) 0%, rgba(0,212,255,1) 100%);
+    width: 100%;
   }
   &__back-image {
     width: 2rem;
@@ -75,8 +79,70 @@
   }
 }
 
+.preferences-error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  max-width: 320px;
+  height: 160px;
+  border: 1px solid var(--color-accent);
+  border-radius: 1rem;
+  padding: 1rem;
+  position: relative;
+  top: calc(50% - 80px);
+  left: calc(50% - 160px);
+
+  a {
+    color: red;
+    text-decoration: none;
+    color: var(--color-accent);
+  }
+}
+
 .flavors-container,
 .strength-container,
 .brands-container {
   padding: 1rem;
+}
+
+.preferences-overlay {
+  position: fixed;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  z-index: 3;
+}
+
+.preferences-popup {
+  text-align: center;
+  position: absolute;
+  top: calc(50% - 4rem);
+  left: calc(50% - 10rem);
+  height: 8rem;
+  width: 20rem;
+  border: 1px solid yellowgreen;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: var(--color-bg);
+
+  &__title,
+  &__text {
+    margin-bottom: 1rem;
+    color: white;
+  }
+
+  &__button {
+    padding: 1rem;
+    border-radius: 0.6rem;
+    margin: 0 auto;
+    display: block;
+    background-color: yellowgreen;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.8;
+    }
+  }
 }
