--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,11 +1,12 @@
 .header {
+  margin-bottom: 20px;
   &__container {
     width: 100%;
     min-height: 80px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    .header__logo{
+    .header__logo {
       flex-grow: 1;
       display: flex;
       justify-content: center;
@@ -13,12 +14,12 @@
     }
     nav {
       flex-grow: 3;
-        ul {
-          display: flex;
-          justify-content: space-evenly;
-          align-items: center;
-          list-style: none;
-  
+      ul {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        list-style: none;
+
         a {
           font-size: 20px;
           text-decoration: none;
@@ -39,7 +40,6 @@
       }
     }
   }
-
 }
 
 .header__mixer {
