feat: Creation of own mixes by users is partially implemented. Appropriate APIs have been created to retrieve these mixes. Fixed some bugs.

--- a/src/style/_userMixes.scss
+++ b/src/style/_userMixes.scss
@@ -16,6 +16,8 @@
 
 .user-mixes__nav {
   margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .user-mixes__heading {
@@ -29,6 +31,15 @@
   width: 2rem;
   height: 2rem;
 
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+}
+
+.user-mixes__add {
+  width: 2.2rem;
+  height: 2.2rem;
   &:hover {
     cursor: pointer;
     transform: scale(1.1);
