feat: change style of mixer page

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@
   --yellow: #ffd049;
   --light-yellow: #fdf2d2;
   --orange: #ffa929;
+  --red: #ff6a66;
   --light-gray: #e3e4e8;
   --gray: #71738b;
   --light-blue: #7a7c93;
