--- a/src/style/_results.scss
+++ b/src/style/_results.scss
@@ -27,7 +27,7 @@
   width: 100%;
   padding: 0.7rem;
   border-radius: 0.7rem;
-  background-color: greenyellow;
+  background-color: var(--green);
 
   &:hover {
     opacity: 0.8;
