--- a/src/style/_brandPage.scss
+++ b/src/style/_brandPage.scss
@@ -1,7 +1,7 @@
 .brand-page {
   position: fixed;
   top: 0;
-  background-color: hsl(237, 79%, 12%);
+  background-color: var(--color-bg);
   width: 100%;
   height: 100vh;
   z-index: 1;
@@ -18,7 +18,9 @@
     gap: 1rem;
     margin-bottom: 1rem;
     padding: 0.5rem;
-    background-color: #4cc9f0ff;
+    // background-color: var(--header-bg);
+    // background-color: #4cc9f0ff;
+
   }
 
   &__title {
@@ -33,7 +35,7 @@
     padding: 0.5rem;
     width: calc(100% - 2rem);
     border-radius: 0.8rem;
-    background-color: greenyellow;
+    background-color: var(--green);
     margin: 1rem;
 
     &:hover {
@@ -88,13 +90,13 @@
   }
 
   &__image--add-new {
-    background-color: rgb(8, 214, 26);
+    background-color: var(--green);
     border-radius: 50%;
     transition: 0.3s;
   }
 
   &__image--added {
-    background-color: rgb(224, 8, 8);
+    background-color: var(--red);
     border-radius: 50%;
     transform: rotateZ(45deg);
     transition: 0.3s;
