--- a/src/style/_brandSuggest.scss
+++ b/src/style/_brandSuggest.scss
@@ -1,10 +1,9 @@
 .brand-suggest {
   position: fixed;
   top: 0;
-  background-color: hsl(237, 79%, 12%);
+  background-color: var(--color-bg);
   width: 100%;
   height: 100%;
-  // padding: 1rem;
   z-index: 1;
   overflow-y: scroll;
 
@@ -12,7 +11,6 @@
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
-    background-color: #4cc9f0ff;
     padding: 0.5rem;
   }
 }
@@ -43,7 +41,7 @@
 
     &--required::after {
       content: '*';
-      color: red;
+      color: var(--red);
     }
   }
 
@@ -56,7 +54,7 @@
     padding-bottom: 0.3rem;
     background-color: transparent;
     color: white;
-    border-bottom: 1px solid greenyellow;
+    border-bottom: 1px solid var(--green);
     outline: none;
 
     &::placeholder {
@@ -74,7 +72,7 @@
     width: 80%;
     padding: 0.8rem;
     border-radius: 0.8rem;
-    background-color: greenyellow;
+    background-color: var(--green);
 
     &:hover {
       cursor: pointer;
@@ -124,7 +122,7 @@
   left: calc(50% - 20rem);
   height: 10rem;
   width: 40rem;
-  border: 1px solid yellowgreen;
+  border: 1px solid var(--green);
   border-radius: 1rem;
   padding: 1rem;
   background-color: var(--color-bg);
@@ -139,7 +137,7 @@
     border-radius: 0.6rem;
     margin: 0 auto;
     display: block;
-    background-color: yellowgreen;
+    background-color: var(--green);
 
     &:hover {
       cursor: pointer;
