--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -9,6 +9,10 @@
     gap: 10px;
     text-align: center;
 
+    @media (width < 769px) {
+      flex-wrap: wrap;
+    }
+
     a {
       text-decoration: none;
       cursor: pointer;
@@ -18,6 +22,7 @@
 
   &__github {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -37,18 +42,4 @@
     box-shadow: 0 0px 2px rgb(228 220 220 / 76%);
     padding: 15px;
   }
-  // &__mixer-number {
-  //   position: absolute;
-  //   left: -1rem;
-  //   bottom: -0.4rem;
-  //   width: 1.5rem;
-  //   height: 1.5rem;
-  //   font-size: 1.2rem;
-  //   color: black;
-  //   background-color: greenyellow;
-  //   border: 1px solid green;
-  //   border-radius: 50%;
-  //   text-align: center;
-  //   font-weight: bold;
-  // }
 }
