--- a/src/style/_preferences.scss
+++ b/src/style/_preferences.scss
@@ -94,7 +94,7 @@
   left: calc(50% - 160px);
 
   a {
-    color: red;
+    color: var(--red);
     text-decoration: none;
     color: var(--color-accent);
   }
@@ -122,7 +122,7 @@
   left: calc(50% - 10rem);
   height: 8rem;
   width: 20rem;
-  border: 1px solid yellowgreen;
+  border: 1px solid var(--green);
   border-radius: 1rem;
   padding: 1rem;
   background-color: var(--color-bg);
@@ -138,7 +138,7 @@
     border-radius: 0.6rem;
     margin: 0 auto;
     display: block;
-    background-color: yellowgreen;
+    background-color: var(--green);
 
     &:hover {
       cursor: pointer;
