--- a/src/style/_mainPageTopBlock.scss
+++ b/src/style/_mainPageTopBlock.scss
@@ -8,6 +8,10 @@
     grid-template-columns: 1fr 1fr;
     grid-auto-flow: dense;
   }
+
+  @media (width < 426px) {
+    margin: 1rem 1.5rem;
+  }
 }
 
 .mix-week-card {
@@ -24,6 +28,10 @@
   &__title {
     font-weight: 400;
     margin-bottom: 2rem;
+
+    @media (width < 426px) {
+      hyphens: auto;
+    }
   }
 
   &__text {
@@ -68,11 +76,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  &__title {}
 
   &__image {
     width: 3rem;
     height: 3rem;
+
+    @media (width < 769px) {
+      width: 2rem;
+      height: 2rem;
+    }
   }
 
   &:hover {
