feat: style 404 page

--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,7 @@
 @import './style/listComplitationPage';
 @import './style/mainPagePopularMixes';
 @import './style/new_mix';
+@import './style/errorPage';
 
 :root {
   --color-bg: #03041b;
