feat: change position of error message on smaller screens

--- a/src/style/_errorPage.scss
+++ b/src/style/_errorPage.scss
@@ -4,4 +4,8 @@
   left: calc(50% - 128px);
   text-align: center;
   font-variant: small-caps;
+
+  @media (width < 769px) {
+    top: calc(50% - 128px - 5rem);
+  }
 }
