--- a/src/style.scss
+++ b/src/style.scss
@@ -91,7 +91,7 @@ body {
 
   // mixerPage
   .mixer {
-    margin: 25px 130px;
+    margin: 3rem 15rem;
     background-image: linear-gradient(65deg, #edb8ff, #6148ff);
     box-shadow: 0 24px 34px 0 rgb(74 58 255 / 5%), 0 9px 24px 0 rgb(0 0 0 / 45%);
     padding: 1px;
