--- a/src/style.scss
+++ b/src/style.scss
@@ -214,3 +214,53 @@ body {
   border-radius: 8px;
   color: var(--color-font);
 }
+
+@media (max-width: 1200px) {
+  .main {
+    .mixer {
+      margin: 3rem 12rem;
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  .main {
+    .mixer {
+      margin: 3rem 8rem;
+    }
+  }
+}
+@media (max-width: 840px) {
+  .main {
+    .mixer {
+      margin: 3rem 4rem;
+    }
+  }
+}
+@media (max-width: 640px) {
+  .main {
+    .mixer {
+      margin: 3rem 4rem;
+      .mixer__inner {
+        .button {
+          width: -webkit-fill-available;
+          a {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 520px) {
+  .main {
+    .mixer {
+      margin: 3rem 1rem;
+      .mixer__inner {
+        .button a {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+}
