--- a/src/style.scss
+++ b/src/style.scss
@@ -228,12 +228,18 @@ body {
     .mixer {
       margin: 3rem 8rem;
     }
+    .account {
+      margin: 2rem 12rem;
+    }
   }
 }
 @media (max-width: 840px) {
   .main {
     .mixer {
       margin: 3rem 4rem;
+    }
+    .account {
+      margin: 2rem 8rem;
     }
   }
 }
@@ -250,6 +256,9 @@ body {
         }
       }
     }
+    .account {
+      margin: 2rem 4rem;
+    }
   }
 }
 @media (max-width: 520px) {
@@ -261,6 +270,9 @@ body {
           font-size: 1rem;
         }
       }
+    }
+    .account {
+      margin: 2rem 1rem;
     }
   }
 }
