fix: some styles

--- a/src/style/_mixesList.scss
+++ b/src/style/_mixesList.scss
@@ -11,7 +11,6 @@
     justify-content: center;
     align-items: center;
   }
-
 }
 
 .mixes-list__card {
@@ -19,7 +18,8 @@
   align-items: center;
   padding: 20px 20px 0;
   background-color: #170f3087;
-  box-shadow: 0 5px 40px 0 rgb(0 0 0 / 40%), inset 0 -76px 80px -44px rgb(255 255 255 / 1%), inset -1px -9px 48px 0 rgb(255 255 255 / 6%);
+  box-shadow: 0 5px 40px 0 rgb(0 0 0 / 40%), inset 0 -76px 80px -44px rgb(255 255 255 / 1%),
+    inset -1px -9px 48px 0 rgb(255 255 255 / 6%);
   max-height: 10rem;
 
   .mixes-list__card-img {
@@ -39,7 +39,7 @@
     align-items: baseline;
     flex-grow: 1;
 
-    @media (width < 426px) {
+    @media (width < 486px) {
       align-items: center;
     }
   }
@@ -58,6 +58,7 @@
     padding: 20px;
     justify-content: space-between;
     width: 100%;
+    align-items: center;
 
     @media (width < 486px) {
       flex-direction: column;
